--- a/mukta.html
+++ b/mukta.html
@@ -34,7 +34,7 @@
             <img class="logo" src="Images/image/logo.jpg">
             <ul class="navbar-items display-flex">
                 <li class="navbar-item"><a class="navbar_link grey" href="index.html">Hjem</a></li>
-                <li class="navbar-item"><a class="navbar_link grey" href="#">Om Oss</a></li>
+                <li class="navbar-item"><a class="navbar_link grey" href="Omoss.html">Om Oss</a></li>
                 <li class="navbar-item"><a class="navbar_link grey" href="registration.html">Register</a></li>
                 <li class="navbar-item"><a class="navbar_link dark-grey" href="#">Portfolio</a></li>
                 <li class="navbar-item"><a class="navbar_link grey" href="login.html">Log In</a></li>
@@ -73,10 +73,10 @@
         <div class="experience-box">
             <h3>Software Engineering – Prosjekter</h3>
             <p>
-                • Utviklet dynamiske brukergrensesnitt  
-                • Implementert API-integrasjoner  
-                • Jobbet med feilsøking, optimalisering og testing  
-                • Erfaring med fullstack-prosjekter og teamarbeid  
+                • Utviklet dynamiske brukergrensesnitt <br> 
+                • Implementert API-integrasjoner  <br>
+                • Jobbet med feilsøking, optimalisering og testing  <br>
+                • Erfaring med fullstack-prosjekter og teamarbeid  <br>
             </p>
         </div>
 
