--- a/varsha.html
+++ b/varsha.html
@@ -34,7 +34,7 @@
             <img class="logo" src="Images/image/logo.jpg">
             <ul class="navbar-items display-flex">
                 <li class="navbar-item"><a class="navbar_link grey" href="index.html">Hjem</a></li>
-                <li class="navbar-item"><a class="navbar_link grey" href="#">Om Oss</a></li>
+                <li class="navbar-item"><a class="navbar_link grey" href="Omoss.html">Om Oss</a></li>
                 <li class="navbar-item"><a class="navbar_link grey" href="registration.html">Register</a></li>
                 <li class="navbar-item"><a class="navbar_link dark-grey" href="#">Portfolio</a></li>
                 <li class="navbar-item"><a class="navbar_link grey" href="login.html">Log In</a></li>
@@ -66,18 +66,18 @@
             <div>Microsoft Office 365</div>
             <div>IT-Support</div>
             <div>Dokumentasjon</div>
-            <div>Helpdesk</div>
-            <div>Brukeradministrasjon</div>
+            <div>Kunde Service</div>
+           
         </div>
 
         <h2 class="section-title">Erfaring</h2>
         <div class="experience-box">
             <h3>IT Administrator – Prosjekter</h3>
             <p>
-                • Utført brukerstøtte og feilsøking  
-                • Administrert brukerprofiler og tilgangsstyring  
-                • Jobbet med installasjon, oppsett og sikkerhet  
-                • Bistått i IT-driftsoppgaver og tekniske rutiner  
+                • Utført brukerstøtte og feilsøking <br>  
+                • Administrert brukerprofiler og tilgangsstyring  <br>
+                • Jobbet med installasjon, oppsett og sikkerhet  <br>
+                • Bistått i IT-driftsoppgaver og tekniske rutiner <br> 
             </p>
         </div>
 
