--- a/registration.html
+++ b/registration.html
@@ -1,83 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrering</title>
-    <style>
-     @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
-    </style>
+    <title>Registrering – Nettverkshuset</title>
+
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body class="inter">
-     <!-- header section starts-->
+
+    <!-- Header -->
     <header class="header">
         <nav class="navbar display-flex">
-            <img class="logo" src="Images/image/logo.jpg" alt="logo of Nettverkshuset">
+            <div class="logo-wrapper display-flex">
+                <img class="logo" src="Images/image/logo.jpg" alt="logo of Nettverkshuset">
+                <span class="brand-text">Nettverkshuset</span>
+            </div>
+
             <ul class="navbar-items display-flex">
-                <li class="navbar-item"> <a class="navbar_link dark-grey" href="index.html"> Hjem </a></li>
-                <li class="navbar-item"> <a class="navbar_link grey" href=""> Om Oss </a></li>
-                <li class="navbar-item"> <a class="navbar_link grey" href=""> Register </a></li>
-                <li class="navbar-item"> <a class="navbar_link grey" href=""> Portfolio </a></li>
-                <li class="navbar-item"> <a class="navbar_link grey" href=""> Log In </a> </li>
+                <li class="navbar-item"> <a class="navbar_link" href="index.html">Hjem</a></li>
+                <li class="navbar-item"> <a class="navbar_link" href="Omoss.html">Om Oss</a></li>
+                <li class="navbar-item"> <a class="navbar_link active" href="registration.html">Registrering</a></li>
+                <li class="navbar-item"> <a class="navbar_link login-link" href="login.html">Logg inn</a></li>
             </ul>
         </nav>
     </header>
-    <!--regitration form starts here-->
-    <main class="registreringsskjema">
-        <h2 class="center registreringsskjema-heading">Registreringsskjema for Digital Portefølje</h2>
-        <div class="skjema display-flex">
-            <form action='upload.php' method='post' enctype='multipart/form-data'>
-                <!--name-->
-                <label for="fname">Name </label><br>
-                <div class="display-flex skjema-name">
-                    <input type="text" id="fname" name="fname" placeholder="First Name" required>
-                    <input type="text" id="lname" name="lname" placeholder="Last Name">
-                </div><br>
 
-                <!-- Email -->
-                <div>
-                    <label for="email_2">Email</label><br>
-                    <input type="email" id="email_2" name="email" required>
-                </div>
 
-                <!-- Phone -->
-                <div>
-                    <label for="phone_number">Phone Number</label><br>
-                    <input type="tel" id="phone_number" name="phone" required>
-                </div>
+    <!-- Background wrapper matching index.html -->
+    <div style="
+        background: radial-gradient(circle at top left, #f1f5ff 0%, #ffffff 45%, #fdf2ff 100%);
+        padding: 3rem 1.5rem;
+        min-height: 100vh;
+    ">
 
-                <!-- Resume Upload -->
-                <div class="upload-section">
-                    <label for="resume-upload" class="upload-box">
-                    <h3>Upload CV</h3>
-                    <span class="choose">Choose a file</span> or drop it here
-                    <p class="limit">10MB size limit</p>
-                    <input type="file" id="resume-upload" name="resume">
-                    </label>
-                </div>
+        <!-- Registration form with pink→violet glow -->
+        <main class="registreringsskjema" 
+            style="
+                background: linear-gradient(135deg, rgba(255, 192, 253, 0.35), rgba(142, 123, 255, 0.35));
+                backdrop-filter: blur(10px);
+                border-radius: 25px;
+                box-shadow:
+                    0 25px 60px rgba(83, 83, 221, 0.25),
+                    0 10px 25px rgba(249, 115, 222, 0.25);
+                border: 1px solid rgba(255, 255, 255, 0.4);
+            "
+        >
 
-                <!-- Submit -->
-                 <div class="center">
-                    <input type="submit" value="Submit">
-                 </div>
-                
+            <h2 class="center registreringsskjema-heading noto-serif">Registreringsskjema</h2>
 
-           </form>
+            <div class="skjema display-flex">
+                <form action="upload.php" method="post" enctype="multipart/form-data">
+
+                    <!-- Name -->
+                    <label for="fname">Navn</label><br>
+                    <div class="display-flex skjema-name">
+                        <input type="text" id="fname" name="fname" placeholder="Fornavn" required>
+                        <input type="text" id="lname" name="lname" placeholder="Etternavn" required>
+                    </div>
+
+                    <!-- Email -->
+                    <label for="email_2">E-post</label>
+                    <input type="email" id="email_2" name="email" placeholder="navn@eksempel.no" required>
+
+                    <!-- Phone -->
+                    <label for="phone_number">Telefon</label>
+                    <input type="tel" id="phone_number" name="phone" placeholder="+47 123 45 678" required>
+
+                    <!-- CV Upload -->
+                    <div class="upload-section">
+                        <label for="resume-upload" class="upload-box" style="
+                            background: rgba(255, 255, 255, 0.6);
+                            border-radius: 15px;
+                            border-color: rgba(149, 141, 255, 0.7);
+                        ">
+                            <h3>Last opp CV</h3>
+                            <span class="choose">Velg en fil</span> eller dra den hit
+                            <p class="limit">Maks 10 MB</p>
+                            <input type="file" id="resume-upload" name="resume">
+                        </label>
+                    </div>
+
+                    <!-- Submit -->
+                    <div class="center">
+                        <input type="submit" value="Send inn" style="
+                            background: linear-gradient(135deg, #5353dd, #f973c9);
+                            border-radius: 999px;
+                            padding: 12px 30px;
+                            border: none;
+                            color: white;
+                            font-weight: 600;
+                            box-shadow: 0 20px 45px rgba(79, 70, 229, 0.45);
+                        ">
+                    </div>
+
+                </form>
+            </div>
+
+        </main>
     </div>
-</main>
-     <!--fotter starts here-->
+
+
+    <!-- Footer -->
     <footer class="footer display-flex">
-      <div class="copyright">Copyright @ 2025 by <a href="https://www.nettverkshuset.no/?fbclid=IwY2xjawOB5JNleHRuA2FlbQIxMABicmlkETFFd2g4WFF5eTM4c3ZJWXZVc3J0YwZhcHBfaWQQMjIyMDM5MTc4ODIwMDg5MgABHo2dhGeenpd40uED1M2cCfJvfqSzXyQOBoQ1gZBw_J1JLVif2h5d5hVlBKnq_aem_qOwwLTTyS6mfUfqDJwYQKQ">Nettverkshuset</a></div>
-      <div class="footer-item">
-         <img class="logo" src="./Images/image/logo.jpg"></div>
-      <div class="display-flex social-media">
-         <a href="https://www.linkedin.com/company/nettverkshuset.no/posts/?feedView=all"> <i class="fab fa-linkedin"></i></a>
-         <a href="https://www.facebook.com/p/Nettverkshuset-61568715764908/"> <i class="fa-brands fa-facebook"></i></a>
-         <a href="https://www.instagram.com/nettverkshuset/"> <i class="fab fa-instagram"></i></a>
-      </div>
+        <div class="copyright">
+            © 2025 · <a href="https://www.nettverkshuset.no/">Nettverkshuset</a>
+        </div>
+
+        <div class="footer-item">
+            <img class="logo footer-logo" src="Images/image/logo.jpg" alt="Nettverkshuset logo">
+        </div>
+
+        <div class="display-flex social-media">
+            <a href="https://www.linkedin.com/company/nettverkshuset.no/posts/?feedView=all"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/p/Nettverkshuset-61568715764908/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/nettverkshuset/"><i class="fab fa-instagram"></i></a>
+        </div>
     </footer>
-    
+
 </body>
 </html>
