--- a/vini.html
+++ b/vini.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Syeda – Data Scientist</title>
+    <title>Vinithra Halan – Programvareutvikler</title>
 
     <!-- Fonts -->
     <style>
@@ -110,7 +110,7 @@
     <!-- Navigation bar -->
     <header class="header">
         <nav class="navbar display-flex">
-            <img class="logo" src="Images/image/logo.jpg" alt="logo of Nettverkshuset">
+            <img class="logo" src="Images/image/logo.jpg" alt="logo">
             <ul class="navbar-items display-flex">
                 <li class="navbar-item"> <a class="navbar_link grey" href="index.html"> Hjem </a></li>
                 <li class="navbar-item"> <a class="navbar_link grey" href="Omoss.html"> Om Oss </a></li>
@@ -125,45 +125,43 @@
     <div class="portfolio-wrapper">
 
         <div class="profile-header">
-    <img class="profile-photo" src="Images/image/Farzana.jpeg" alt="Syeda profile image">
+            <img class="profile-photo" src="Images/image/VIni.jpeg" alt="Vinithra profile image">
 
-    <div class="profile-info">
-        <h1>Syeda Farzana</h1>
-        <h3>Data Scientist</h3>
-    </div>
-</div>
+            <div class="profile-info">
+                <h1>Vinithra Halan</h1>
+                <h3>Software Engineer</h3>
+            </div>
+        </div>
 
         <!-- About section -->
         <h2 class="section-title">Om Meg</h2>
         <p class="about-text">
-            Jeg er en engasjert Data Scientist med sterk interesse for dataanalyse, maskinlæring og bruk av teknologi 
-            for å løse praktiske problemer. Jeg kombinerer teknisk kompetanse med nysgjerrighet og presisjon, og liker 
-            å utforske innsikt gjennom data. Jeg brenner for å bidra i prosjekter som skaper verdi for mennesker, 
-            organisasjoner og samfunnet.
+            Jeg er Vinithra Halan, en dedikert software engineer med sterk interesse for å utvikle robuste, effektive og brukervennlige systemer. Jeg arbeider strukturert og detaljorientert, og trives med å omgjøre komplekse idéer til stabile og skalerbare løsninger. Jeg er alltid nysgjerrig på nye teknologier og motiveres av å styrke min kompetanse gjennom utfordrende prosjekter og kontinuerlig forbedring av utviklingsprosesser.
         </p>
 
         <!-- Skills section -->
         <h2 class="section-title">Ferdigheter</h2>
         <div class="skills-list">
+            <div>JavaScript & TypeScript</div>
+            <div>React</div>
+            <div>Node.js / Express</div>
             <div>Python</div>
-            <div>Pandas & NumPy</div>
-            <div>Machine Learning</div>
-            <div>Kunstig Inteligense</div>
-            <div>Natural Language Processing</div>
-            <div>Data Visualisering</div>
-            <div>Microsoft Azure</div>
-            <div>SQL</div>
+            <div>REST APIer & Microservices</div>
+            <div>Docker & Containerisering</div>
+            <div>Git & GitLab CI/CD</div>
+            <div>SQL og databasedesign</div>
         </div>
 
         <!-- Experience section -->
-        <h2 class="section-title">Erfaring</h2>
+        <h2 class="section-title">Erfaring & Prosjekter</h2>
         <div class="experience-box">
-            <h3 style="margin-bottom: 10px;">Data Scientist – Prosjekter</h3>
+            <h3 style="margin-bottom: 10px;">Utvalgte erfaringer</h3>
             <p>
-                • Bygget maskinlæringsmodeller for klassifisering og prediksjon <br>  
-                • Utførte datarensing, feature engineering og visualisering  <br>
-                • Arbeidet med både strukturerte og ustrukturerte datasett  <br>
-                • Utviklet helhetlige datastrategier og rapporter  <br>
+                • Utviklet moderne webapplikasjoner med fokus på brukeropplevelse og vedlikeholdbar kode.  <br>
+                • Bygget backend-tjenester og APIer, inkludert autentisering, datalagring og feilhåndtering.  <br>
+                • Implementert Docker-baserte deploy-pipelines og CI/CD-arbeidsflyter for pålitelig produksjonsutrulling.  <br>
+                • Arbeidet med feature flags, versjonsstyring og strategi for trygg utrulling av nye funksjoner.  <br>
+                • Samarbeidet i tverrfaglige team, brukt testdrevet utvikling og fokusert på skalerbarhet og operasjonell stabilitet.
             </p>
         </div>
 
